napid id docs and code improvements